Cambios en .env

--- a/.env
+++ b/.env
@@ -1,9 +1,30 @@
-# MongoDB Atlas connection string (or any MongoDB URI)
-# Get it from: MongoDB Atlas → Cluster → Connect → Connect your application
-MONGODB_URI=mongodb+srv://danisanti1910:ll4TalT3Ofevkkhz@cluster0.us5m00l.mongodb.net/?appName=Cluster0
+# =============================================================================
+# Copia este archivo o renómbralo a .env y rellena los valores.
+# NUNCA subas .env al repositorio (debe estar en .gitignore).
+# =============================================================================
 
-# Optional: same as MONGODB_URI (app checks both)
-# DATABASE_URL=mongodb+srv://...
+# =============================================================================
+# BASE DE DATOS
+# =============================================================================
+# MongoDB Atlas: Cluster → Connect → Connect your application
+MONGODB_URI=
 
-# Server port (default: 5000)
+# Opcional (el backend usa MONGODB_URI o DATABASE_URL)
+# DATABASE_URL=
+
+# =============================================================================
+# BACKEND (Render / servidor Node)
+# =============================================================================
 # PORT=5000
+
+# URL pública del frontend (CORS). Sin barra final.
+FRONTEND_URL=
+
+# Emails de super administrador, separados por coma
+SUPER_ADMIN_EMAIL=
+
+# =============================================================================
+# FRONTEND (solo si el front está en otro dominio)
+# =============================================================================
+# URL del backend. Sin barra final.
+VITE_API_URL=
